<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_titulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewtitulo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_Subtitulo" />

        <EditText
            android:id="@+id/txtSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewSubtitulo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_isbn" />

        <EditText
            android:id="@+id/txtISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewISBN"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_autor" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewAutor"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/viewAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_anio" />

        <EditText
            android:id="@+id/txtAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewAno"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/viewPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_precio" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewPrecio"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete" />

    </LinearLayout>
    <!--
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            tools:ignore="BottomAppBar">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_edit" />
        </com.google.android.material.bottomappbar.BottomAppBar>-->
</LinearLayout>